--- a/index.html
+++ b/index.html
@@ -7,50 +7,59 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <link href="https://fonts.googleapis.com/css2?family=SF+Pro+Display:wght@300;400;600&display=swap" rel="stylesheet">
+    
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="p-6">
+
     <div class="max-w-5xl mx-auto space-y-8">
         <header class="flex justify-between items-center px-4 fade-in">
             <div>
-                <h1 class="text-3xl font-semibold tracking-tight text-slate-800">IS-2 <span class="text-blue-600">Smart Hub</span></h1>
-                <p id="clock" class="text-slate-500 font-medium"></p>
+                <h1 class="text-4xl font-semibold tracking-tight text-slate-900">IS-2 <span class="text-blue-600">Smart Hub</span></h1>
+                <p id="clock" class="text-slate-500 font-medium text-lg"></p>
             </div>
-            <div id="status-indicator" class="flex items-center gap-2 text-xs font-semibold bg-white/50 px-4 py-2 rounded-full">
-                <span class="w-2 h-2 bg-green-500 rounded-full animate-pulse"></span> Live Sync
+            <div id="status-indicator" class="flex items-center gap-2 text-xs font-bold bg-white/60 px-5 py-2 rounded-full shadow-sm">
+                <span class="w-2.5 h-2.5 bg-green-500 rounded-full animate-pulse"></span> SYSTEM LIVE
             </div>
         </header>
 
         <div class="grid grid-cols-1 lg:grid-cols-12 gap-8">
             <div class="lg:col-span-4 space-y-8 fade-in" style="animation-delay: 0.1s;">
-                <div class="calendar-widget p-6 shadow-xl text-center">
-                    <p id="cal-month" class="text-sm font-bold uppercase tracking-widest opacity-80"></p>
-                    <p id="cal-date" class="text-7xl font-bold my-2"></p>
-                    <p id="cal-day" class="text-lg font-medium opacity-90"></p>
+                <div class="calendar-widget p-8 shadow-2xl text-center">
+                    <p id="cal-month" class="text-sm font-black uppercase tracking-[0.2em] opacity-80"></p>
+                    <p id="cal-date" class="text-8xl font-bold my-2 drop-shadow-md"></p>
+                    <p id="cal-day" class="text-xl font-medium opacity-90"></p>
                 </div>
 
-                <div class="liquid-glass p-6 space-y-4">
-                    <h3 class="text-lg font-semibold px-1">Tambah Info</h3>
-                    <select id="kategori" class="w-full glass-input p-3 text-sm font-medium">
-                        <option value="jadwal">📅 Jadwal Kuliah</option>
-                        <option value="tugas">🔥 Deadline Tugas</option>
-                        <option value="kegiatan">🌟 Kegiatan Kelas</option>
-                    </select>
-                    <textarea id="isiData" placeholder="Tulis jadwal atau tugas..." class="w-full glass-input p-4 h-28 text-sm"></textarea>
-                    <button onclick="simpanData()" id="btnSimpan" class="w-full bg-blue-600 text-white py-4 rounded-2xl font-bold shadow-lg hover:bg-blue-700 active:scale-95 transition-all">Update Database</button>
+                <div class="liquid-glass p-7 space-y-5">
+                    <h3 class="text-xl font-semibold px-1 text-slate-800">Update Info</h3>
+                    <div class="space-y-3">
+                        <select id="kategori" class="w-full glass-input p-4 text-sm font-semibold text-slate-700 cursor-pointer">
+                            <option value="jadwal">📅 Jadwal Kuliah</option>
+                            <option value="tugas">🔥 Deadline Tugas</option>
+                            <option value="kegiatan">🌟 Kegiatan Kelas</option>
+                        </select>
+                        <textarea id="isiData" placeholder="Tulis rincian di sini..." class="w-full glass-input p-5 h-32 text-sm text-slate-800 leading-relaxed"></textarea>
+                    </div>
+                    <button onclick="simpanData()" id="btnSimpan" class="w-full bg-blue-600 text-white py-4 rounded-3xl font-bold shadow-[0_10px_20px_rgba(0,122,255,0.3)] hover:bg-blue-700 hover:shadow-blue-500/40 active:scale-95 transition-all duration-300">Sync to Cloud</button>
                 </div>
             </div>
 
             <div class="lg:col-span-8 fade-in" style="animation-delay: 0.2s;">
-                <div class="liquid-glass p-8 min-h-[500px]">
-                    <h2 class="text-2xl font-semibold mb-6">Informasi Terbaru</h2>
-                    <div id="listData" class="space-y-4">
-                        <p class="text-slate-400 animate-pulse text-center mt-20">Mengambil data...</p>
+                <div class="liquid-glass p-8 min-h-[600px] flex flex-col">
+                    <h2 class="text-2xl font-semibold mb-8 text-slate-900 flex items-center gap-3">
+                        Feed Informasi <span class="text-sm font-normal text-slate-400 bg-slate-100 px-3 py-1 rounded-lg" id="counter">0 item</span>
+                    </h2>
+                    <div id="listData" class="space-y-5 flex-grow">
+                        <div class="flex justify-center items-center h-64">
+                            <div class="animate-spin rounded-full h-8 w-8 border-b-2 border-blue-600"></div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+
     <script src="script.js"></script>
 </body>
 </html>
