--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IS-2 Hub | iOS 26 Edition</title>
+    <title>IS-2 Hub | Monochrome Liquid</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <link href="https://fonts.googleapis.com/css2?family=SF+Pro+Display:wght@300;400;600&display=swap" rel="stylesheet">
@@ -14,15 +14,15 @@
     <div class="max-w-6xl mx-auto space-y-8">
         <header class="flex justify-between items-center px-6 fade-in">
             <div>
-                <h1 class="text-4xl font-semibold tracking-tight header-text">IS-2 <span class="text-blue-600">Hub</span></h1>
+                <h1 class="text-4xl font-semibold tracking-tight header-text">IS-2 <span class="text-zinc-500">Hub</span></h1>
                 <p id="clock" class="sub-text font-medium"></p>
             </div>
             
             <div class="flex items-center gap-4">
-                <button onclick="toggleTheme()" class="theme-toggle-btn">
+                <button onclick="toggleTheme()" class="theme-toggle-btn shadow-sm">
                     <span id="theme-icon">🌙</span>
                 </button>
-                <div class="status-pill">
+                <div class="status-pill border border-zinc-200 dark:border-zinc-800">
                     <span class="dot"></span> <span class="status-label">SYNCED</span>
                 </div>
             </div>
@@ -31,45 +31,46 @@
         <div class="grid grid-cols-1 lg:grid-cols-12 gap-8">
             <div class="lg:col-span-4 space-y-6 fade-in">
                 <div class="liquid-glass p-6 space-y-4">
-                    <h2 class="text-xl font-semibold title-text">Input Kegiatan</h2>
+                    <h2 class="text-xl font-semibold title-text">New Entry</h2>
                     <div class="space-y-3">
-                        <label class="label-text">Kategori</label>
-                        <select id="kategori" class="w-full glass-input p-3">
-                            <option value="tugas">🔥 Deadline Tugas</option>
-                            <option value="jadwal">📅 Jadwal Kuliah</option>
-                            <option value="kegiatan">🌟 Event Kelas</option>
+                        <label class="label-text">Category</label>
+                        <select id="kategori" class="w-full glass-input p-3 appearance-none">
+                            <option value="tugas">Task & Deadline</option>
+                            <option value="jadwal">Course Schedule</option>
+                            <option value="kegiatan">Class Event</option>
                         </select>
 
-                        <label class="label-text">Tanggal Deadline/Event</label>
+                        <label class="label-text">Due Date</label>
                         <input type="date" id="tglDeadline" class="w-full glass-input p-3">
 
-                        <label class="label-text">Keterangan</label>
-                        <textarea id="isiData" placeholder="Contoh: Kuis Kimia Dasar..." class="w-full glass-input p-3 h-24"></textarea>
+                        <label class="label-text">Description</label>
+                        <textarea id="isiData" placeholder="Details here..." class="w-full glass-input p-3 h-24"></textarea>
                     </div>
-                    <button onclick="simpanData()" id="btnSimpan" class="ios-btn-primary w-full">Update Hub</button>
+                    <button onclick="simpanData()" id="btnSimpan" class="ios-btn-primary w-full">Commit Changes</button>
                 </div>
 
                 <div class="calendar-widget p-6 text-center">
-                    <p id="cal-month" class="text-sm font-black uppercase tracking-widest opacity-70"></p>
+                    <p id="cal-month" class="text-sm font-black uppercase tracking-widest opacity-60"></p>
                     <p id="cal-date" class="text-7xl font-bold my-1"></p>
-                    <p id="cal-day" class="text-lg font-medium opacity-80"></p>
+                    <p id="cal-day" class="text-lg font-medium opacity-70"></p>
                 </div>
             </div>
 
             <div class="lg:col-span-8 space-y-6 fade-in">
                 <div class="liquid-glass p-6">
-                    <h2 class="text-xl font-semibold mb-4 title-text">Kalender Akademik</h2>
-                    <div class="grid grid-cols-7 gap-2 text-center text-[10px] font-bold text-slate-400 mb-2">
-                        <div>MNG</div><div>SEN</div><div>SEL</div><div>RAB</div><div>KAM</div><div>JUM</div><div>SAB</div>
+                    <h2 class="text-xl font-semibold mb-4 title-text">Academic Calendar</h2>
+                    <div id="calendar-month-year" class="text-sm font-bold mb-4 opacity-50"></div>
+                    <div class="grid grid-cols-7 gap-2 text-center text-[10px] font-bold text-zinc-400 mb-2">
+                        <div>SUN</div><div>MON</div><div>TUE</div><div>WED</div><div>THU</div><div>FRI</div><div>SAT</div>
                     </div>
                     <div id="calendar-container" class="grid grid-cols-7 gap-2">
                         </div>
                 </div>
 
                 <div class="liquid-glass p-6 min-h-[300px]">
-                    <h2 class="text-xl font-semibold mb-6 title-text">Daftar Deadline</h2>
+                    <h2 class="text-xl font-semibold mb-6 title-text">Upcoming Feed</h2>
                     <div id="listData" class="space-y-4">
-                        <p class="text-center text-slate-400 py-10">Menghubungkan Database...</p>
+                        <p class="text-center text-zinc-400 py-10 italic">Connecting to Hub...</p>
                     </div>
                 </div>
             </div>
