--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Information System 2 | Hub</title>
+    <title>IS2 | Productivity Hub</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <link rel="stylesheet" href="style.css">
@@ -16,44 +16,49 @@
                 <h1 class="text-4xl font-bold tracking-tight main-title">Information System 2</h1>
                 <p id="clock" class="sub-text font-medium text-lg mt-1">00:00:00</p>
             </div>
-            
-            <div class="flex items-center gap-3">
-                <button onclick="toggleTheme()" class="theme-toggle-btn">
-                    <span id="theme-icon">🌙</span>
-                </button>
-                <div class="status-pill">
-                    <span class="dot"></span> <span class="status-label">INITIALIZING</span>
-                </div>
+            <div class="status-pill">
+                <span class="dot"></span> <span class="status-label">INITIALIZING</span>
             </div>
         </header>
+
+        <div id="next-deadline-area" class="fade-in"></div>
 
         <div class="grid grid-cols-1 lg:grid-cols-12 gap-8">
             <div class="lg:col-span-4 space-y-6 fade-in">
                 <div class="liquid-glass p-6 space-y-4">
-                    <h2 class="text-xl font-bold title-text tracking-tight">Add Record</h2>
+                    <h2 class="text-xl font-bold tracking-tight">Add Task</h2>
                     <div class="space-y-4">
-                        <div class="input-group">
-                            <label class="label-text">Category</label>
-                            <select id="kategori" class="w-full glass-input p-3 appearance-none cursor-pointer">
-                                <option value="Assignment">Assignment & Deadline</option>
-                                <option value="Schedule">Course Schedule</option>
-                                <option value="Event">Class Event</option>
-                            </select>
+                        <div class="grid grid-cols-2 gap-3">
+                            <div>
+                                <label class="label-text">Category</label>
+                                <select id="kategori" class="w-full glass-input p-3 text-sm">
+                                    <option value="Assignment">Assignment</option>
+                                    <option value="Event">Event</option>
+                                </select>
+                            </div>
+                            <div>
+                                <label class="label-text">Priority</label>
+                                <select id="priority" class="w-full glass-input p-3 text-sm">
+                                    <option value="low">Low</option>
+                                    <option value="medium">Medium</option>
+                                    <option value="high">High 🔥</option>
+                                </select>
+                            </div>
                         </div>
-                        <div class="input-group">
-                            <label class="label-text">Date</label>
+                        <div>
+                            <label class="label-text">Deadline Date</label>
                             <input type="date" id="tglDeadline" class="w-full glass-input p-3">
                         </div>
-                        <div class="input-group">
-                            <label class="label-text">Details</label>
-                            <textarea id="isiData" placeholder="Enter description..." class="w-full glass-input p-3 h-24 resize-none"></textarea>
+                        <div>
+                            <label class="label-text">Task Details</label>
+                            <textarea id="isiData" placeholder="What needs to be done?" class="w-full glass-input p-3 h-20 resize-none"></textarea>
                         </div>
                     </div>
-                    <button onclick="simpanData()" id="btnSimpan" class="ios-btn-primary w-full shadow-lg">Update Hub</button>
+                    <button onclick="simpanData()" id="btnSimpan" class="ios-btn-primary w-full">Update Hub</button>
                 </div>
 
                 <div class="calendar-widget p-6 text-center shadow-xl">
-                    <p id="cal-month" class="text-xs font-black uppercase tracking-[0.3em] opacity-60"></p>
+                    <p id="cal-month" class="text-xs font-black uppercase tracking-widest opacity-60"></p>
                     <p id="cal-date" class="text-7xl font-bold my-1"></p>
                     <p id="cal-day" class="text-base font-medium opacity-70"></p>
                 </div>
@@ -61,19 +66,17 @@
 
             <div class="lg:col-span-8 space-y-6 fade-in">
                 <div class="liquid-glass p-6">
-                    <h2 class="text-xl font-bold mb-6 title-text tracking-tight">Academic Calendar</h2>
-                    <div id="calendar-month-year" class="text-xs font-bold mb-4 opacity-40 uppercase tracking-widest text-center"></div>
-                    <div class="grid grid-cols-7 gap-2 text-center text-[10px] font-black text-zinc-400 mb-4">
+                    <h2 class="text-xl font-bold mb-6 tracking-tight">Academic Calendar</h2>
+                    <div id="calendar-month-year" class="text-xs font-bold mb-4 opacity-40 uppercase text-center"></div>
+                    <div class="grid grid-cols-7 gap-2 text-center text-[10px] font-black text-zinc-400 mb-2">
                         <div>SUN</div><div>MON</div><div>TUE</div><div>WED</div><div>THU</div><div>FRI</div><div>SAT</div>
                     </div>
-                    <div id="calendar-container" class="grid grid-cols-7 gap-2 md:gap-3"></div>
+                    <div id="calendar-container" class="grid grid-cols-7 gap-2"></div>
                 </div>
 
                 <div class="liquid-glass p-6 min-h-[300px]">
-                    <h2 class="text-xl font-bold mb-6 title-text tracking-tight">Timeline Feed</h2>
-                    <div id="listData" class="space-y-4">
-                        <p class="text-center text-zinc-400 py-10 italic">Connecting...</p>
-                    </div>
+                    <h2 class="text-xl font-bold mb-6 tracking-tight">Timeline Feed</h2>
+                    <div id="listData" class="space-y-4"></div>
                 </div>
             </div>
         </div>
@@ -81,13 +84,11 @@
 
     <div id="deleteModal" class="fixed inset-0 z-[100] hidden items-center justify-center p-4">
         <div class="absolute inset-0 bg-black/40 backdrop-blur-md"></div>
-        <div class="liquid-glass relative w-full max-w-xs p-8 text-center shadow-2xl" id="modalBox">
-            <div class="w-16 h-16 bg-zinc-100 dark:bg-zinc-800 rounded-full flex items-center justify-center mx-auto mb-4 text-2xl">🗑️</div>
-            <h3 class="text-xl font-bold mb-2">Delete Record?</h3>
-            <p class="text-sm opacity-60 mb-6 font-medium">Data ini akan dihapus permanen dari server.</p>
+        <div class="liquid-glass relative w-full max-w-xs p-8 text-center" id="modalBox">
+            <h3 class="text-xl font-bold mb-4">Delete Task?</h3>
             <div class="flex gap-3">
-                <button onclick="closeDeleteModal()" class="flex-1 py-3 rounded-xl font-bold bg-zinc-200/50 dark:bg-zinc-800 text-sm">Cancel</button>
-                <button id="confirmDeleteBtn" class="flex-1 py-3 rounded-xl font-bold bg-red-600 text-white text-sm shadow-lg shadow-red-500/30">Delete</button>
+                <button onclick="closeDeleteModal()" class="flex-1 py-3 rounded-xl bg-zinc-200 dark:bg-zinc-800">Cancel</button>
+                <button id="confirmDeleteBtn" class="flex-1 py-3 rounded-xl bg-red-600 text-white font-bold">Delete</button>
             </div>
         </div>
     </div>
