--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <p id="clock" class="sub-text font-medium text-lg mt-1">00:00:00</p>
             </div>
             <div class="flex items-center gap-3">
-                <button onclick="toggleTheme()" class="theme-toggle-btn p-2 bg-zinc-100 dark:bg-zinc-800 rounded-full shadow-sm">
+                <button onclick="toggleTheme()" class="p-2 bg-zinc-100 dark:bg-zinc-800 rounded-full shadow-sm">
                     <span id="theme-icon">🌙</span>
                 </button>
                 <div class="status-pill">
@@ -30,7 +30,7 @@
 
         <div class="grid grid-cols-1 lg:grid-cols-12 gap-8">
             <div class="lg:col-span-4 space-y-6 fade-in">
-                <div class="liquid-glass p-6 space-y-4 shadow-xl">
+                <div class="liquid-glass p-6 space-y-4">
                     <h2 class="text-xl font-bold tracking-tight">Add Task</h2>
                     <div class="space-y-4">
                         <div class="grid grid-cols-2 gap-3">
@@ -45,8 +45,8 @@
                                 <label class="label-text">Priority</label>
                                 <select id="priority" class="w-full glass-input p-3 text-sm appearance-none">
                                     <option value="low">Low</option>
-                                    <option value="medium">Medium</option>
-                                    <option value="high">High</option>
+                                    <option value="medium" selected>Medium</option>
+                                    <option value="high">High 🔥</option>
                                 </select>
                             </div>
                         </div>
@@ -79,10 +79,10 @@
                     <div id="calendar-container" class="grid grid-cols-7 gap-2"></div>
                 </div>
 
-                <div class="liquid-glass p-6 min-h-[400px]">
+                <div class="liquid-glass p-6 min-h-[300px]">
                     <h2 class="text-xl font-bold mb-6 tracking-tight">Timeline Feed</h2>
                     <div id="listData" class="space-y-4">
-                        <p class="text-center text-zinc-400 py-10 italic">Connecting to database...</p>
+                        <p class="text-center text-zinc-400 py-10 italic">Connecting...</p>
                     </div>
                 </div>
             </div>
@@ -95,7 +95,7 @@
             <h3 class="text-xl font-bold mb-4">Delete Task?</h3>
             <div class="flex gap-3">
                 <button onclick="closeDeleteModal()" class="flex-1 py-3 rounded-xl bg-zinc-200 dark:bg-zinc-800 font-bold">Cancel</button>
-                <button id="confirmDeleteBtn" class="flex-1 py-3 rounded-xl bg-red-600 text-white font-bold shadow-lg shadow-red-500/30">Delete</button>
+                <button id="confirmDeleteBtn" class="flex-1 py-3 rounded-xl bg-red-600 text-white font-bold">Delete</button>
             </div>
         </div>
     </div>
