--- a/index.html
+++ b/index.html
@@ -30,20 +30,20 @@
 
         <div class="grid grid-cols-1 lg:grid-cols-12 gap-8">
             <div class="lg:col-span-4 space-y-6 fade-in">
-                <div class="liquid-glass p-6 space-y-4">
+                <div class="liquid-glass p-6 space-y-4 shadow-xl">
                     <h2 class="text-xl font-bold tracking-tight">Add Task</h2>
                     <div class="space-y-4">
                         <div class="grid grid-cols-2 gap-3">
                             <div>
                                 <label class="label-text">Category</label>
-                                <select id="kategori" class="w-full glass-input p-3 text-sm appearance-none">
+                                <select id="kategori" class="w-full glass-input p-3 text-sm">
                                     <option value="Assignment">Assignment</option>
                                     <option value="Event">Event</option>
                                 </select>
                             </div>
                             <div>
                                 <label class="label-text">Priority</label>
-                                <select id="priority" class="w-full glass-input p-3 text-sm appearance-none">
+                                <select id="priority" class="w-full glass-input p-3 text-sm">
                                     <option value="low">Low</option>
                                     <option value="medium" selected>Medium</option>
                                     <option value="high">High 🔥</option>
@@ -73,17 +73,12 @@
                 <div class="liquid-glass p-6">
                     <h2 class="text-xl font-bold mb-6 tracking-tight">Academic Calendar</h2>
                     <div id="calendar-month-year" class="text-xs font-bold mb-4 opacity-40 uppercase text-center"></div>
-                    <div class="grid grid-cols-7 gap-2 text-center text-[10px] font-black text-zinc-400 mb-2">
-                        <div>SUN</div><div>MON</div><div>TUE</div><div>WED</div><div>THU</div><div>FRI</div><div>SAT</div>
-                    </div>
                     <div id="calendar-container" class="grid grid-cols-7 gap-2"></div>
                 </div>
 
-                <div class="liquid-glass p-6 min-h-[300px]">
+                <div class="liquid-glass p-6 min-h-[400px]">
                     <h2 class="text-xl font-bold mb-6 tracking-tight">Timeline Feed</h2>
-                    <div id="listData" class="space-y-4">
-                        <p class="text-center text-zinc-400 py-10 italic">Connecting...</p>
-                    </div>
+                    <div id="listData" class="space-y-4"></div>
                 </div>
             </div>
         </div>
@@ -91,7 +86,7 @@
 
     <div id="deleteModal" class="fixed inset-0 z-[100] hidden items-center justify-center p-4">
         <div class="absolute inset-0 bg-black/40 backdrop-blur-md"></div>
-        <div class="liquid-glass relative w-full max-w-xs p-8 text-center" id="modalBox">
+        <div class="liquid-glass relative w-full max-w-xs p-8 text-center">
             <h3 class="text-xl font-bold mb-4">Delete Task?</h3>
             <div class="flex gap-3">
                 <button onclick="closeDeleteModal()" class="flex-1 py-3 rounded-xl bg-zinc-200 dark:bg-zinc-800 font-bold">Cancel</button>
