--- a/index.html
+++ b/index.html
@@ -13,15 +13,16 @@
     <div class="max-w-6xl mx-auto space-y-8">
         <header class="flex flex-col md:flex-row justify-between items-start md:items-center px-6 gap-4 fade-in">
             <div>
-                <h1 class="text-4xl font-bold tracking-tight main-title">Information System 2</h1>
-                <p id="clock" class="sub-text font-medium text-lg mt-1">00:00:00</p>
+                <h1 class="text-4xl font-bold tracking-tight">Information System 2</h1>
+                <p id="clock" class="font-medium text-lg mt-1 opacity-70">00:00:00</p>
             </div>
             <div class="flex items-center gap-3">
-                <button onclick="toggleTheme()" class="p-2 bg-zinc-100 dark:bg-zinc-800 rounded-full shadow-sm">
+                <button onclick="toggleThemeManually()" class="p-2 bg-zinc-100 dark:bg-zinc-800 rounded-full shadow-sm">
                     <span id="theme-icon">🌙</span>
                 </button>
-                <div class="status-pill">
-                    <span class="dot" id="status-dot"></span> <span class="status-label">INITIALIZING</span>
+                <div class="status-pill flex items-center gap-2 bg-zinc-100 dark:bg-zinc-800 px-4 py-2 rounded-xl text-[10px] font-black">
+                    <span class="w-2 h-2 rounded-full bg-green-500" id="status-dot"></span> 
+                    <span class="status-label">SYSTEM ACTIVE</span>
                 </div>
             </div>
         </header>
@@ -31,19 +32,19 @@
         <div class="grid grid-cols-1 lg:grid-cols-12 gap-8">
             <div class="lg:col-span-4 space-y-6 fade-in">
                 <div class="liquid-glass p-6 space-y-4 shadow-xl">
-                    <h2 class="text-xl font-bold tracking-tight">Add Task</h2>
+                    <h2 class="text-xl font-bold">Add Task</h2>
                     <div class="space-y-4">
                         <div class="grid grid-cols-2 gap-3">
                             <div>
-                                <label class="label-text">Category</label>
-                                <select id="kategori" class="w-full glass-input p-3 text-sm">
+                                <label class="label-text text-[10px] font-bold opacity-50 uppercase">Category</label>
+                                <select id="kategori" class="w-full glass-input p-3 text-sm rounded-xl bg-zinc-100 dark:bg-zinc-900">
                                     <option value="Assignment">Assignment</option>
                                     <option value="Event">Event</option>
                                 </select>
                             </div>
                             <div>
-                                <label class="label-text">Priority</label>
-                                <select id="priority" class="w-full glass-input p-3 text-sm">
+                                <label class="label-text text-[10px] font-bold opacity-50 uppercase">Priority</label>
+                                <select id="priority" class="w-full glass-input p-3 text-sm rounded-xl bg-zinc-100 dark:bg-zinc-900">
                                     <option value="low">Low</option>
                                     <option value="medium" selected>Medium</option>
                                     <option value="high">High 🔥</option>
@@ -51,19 +52,23 @@
                             </div>
                         </div>
                         <div>
-                            <label class="label-text">Deadline Date</label>
-                            <input type="date" id="tglDeadline" class="w-full glass-input p-3">
+                            <label class="label-text text-[10px] font-bold opacity-50 uppercase">Deadline Date</label>
+                            <input type="date" id="tglDeadline" class="w-full glass-input p-3 rounded-xl bg-zinc-100 dark:bg-zinc-900">
                         </div>
                         <div>
-                            <label class="label-text">Task Details</label>
-                            <textarea id="isiData" placeholder="What needs to be done?" class="w-full glass-input p-3 h-20 resize-none"></textarea>
+                            <label class="label-text text-[10px] font-bold opacity-50 uppercase">Task Details</label>
+                            <textarea id="isiData" placeholder="What needs to be done?" class="w-full glass-input p-3 h-20 resize-none rounded-xl bg-zinc-100 dark:bg-zinc-900"></textarea>
+                        </div>
+                        <div>
+                            <label class="label-text text-[10px] font-bold opacity-50 uppercase">Resource Link (Optional)</label>
+                            <input type="url" id="taskLink" placeholder="https://..." class="w-full glass-input p-3 text-sm rounded-xl bg-zinc-100 dark:bg-zinc-900">
                         </div>
                     </div>
-                    <button onclick="simpanData()" id="btnSimpan" class="ios-btn-primary w-full shadow-lg">Update Hub</button>
+                    <button onclick="simpanData()" id="btnSimpan" class="w-full bg-black dark:bg-white text-white dark:text-black py-4 rounded-2xl font-bold transition-transform active:scale-95">Update Hub</button>
                 </div>
 
-                <div class="calendar-widget p-6 text-center shadow-xl">
-                    <p id="cal-month" class="text-xs font-black uppercase tracking-widest opacity-60"></p>
+                <div class="calendar-widget bg-black text-white p-6 text-center rounded-[2rem]">
+                    <p id="cal-month" class="text-xs font-black uppercase opacity-60"></p>
                     <p id="cal-date" class="text-7xl font-bold my-1"></p>
                     <p id="cal-day" class="text-base font-medium opacity-70"></p>
                 </div>
@@ -71,13 +76,13 @@
 
             <div class="lg:col-span-8 space-y-6 fade-in">
                 <div class="liquid-glass p-6">
-                    <h2 class="text-xl font-bold mb-6 tracking-tight">Academic Calendar</h2>
+                    <h2 class="text-xl font-bold mb-6">Academic Calendar</h2>
                     <div id="calendar-month-year" class="text-xs font-bold mb-4 opacity-40 uppercase text-center"></div>
                     <div id="calendar-container" class="grid grid-cols-7 gap-2"></div>
                 </div>
 
                 <div class="liquid-glass p-6 min-h-[400px]">
-                    <h2 class="text-xl font-bold mb-6 tracking-tight">Timeline Feed</h2>
+                    <h2 class="text-xl font-bold mb-6">Timeline Feed</h2>
                     <div id="listData" class="space-y-4"></div>
                 </div>
             </div>
@@ -86,7 +91,7 @@
 
     <div id="deleteModal" class="fixed inset-0 z-[100] hidden items-center justify-center p-4">
         <div class="absolute inset-0 bg-black/40 backdrop-blur-md"></div>
-        <div class="liquid-glass relative w-full max-w-xs p-8 text-center">
+        <div class="liquid-glass relative w-full max-w-xs p-8 text-center bg-white dark:bg-zinc-900">
             <h3 class="text-xl font-bold mb-4">Delete Task?</h3>
             <div class="flex gap-3">
                 <button onclick="closeDeleteModal()" class="flex-1 py-3 rounded-xl bg-zinc-200 dark:bg-zinc-800 font-bold">Cancel</button>
