--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="max-w-6xl mx-auto space-y-8">
         <header class="flex flex-col md:flex-row justify-between items-start md:items-center px-6 gap-4 fade-in">
             <div>
-                <h1 class="text-4xl font-bold tracking-tight main-title">Information System 2</h1>
+                <h1 class="text-4xl font-bold tracking-tighter main-title">Information System 2</h1>
                 <p id="clock" class="sub-text font-medium text-lg mt-1 opacity-70">00:00:00</p>
             </div>
             <div class="flex items-center gap-3">
@@ -93,7 +93,7 @@
 
     <div id="deleteModal" class="fixed inset-0 z-[100] hidden items-center justify-center p-4">
         <div class="absolute inset-0 bg-black/40 backdrop-blur-md"></div>
-        <div class="liquid-glass relative w-full max-w-xs p-8 text-center" id="modalBox">
+        <div class="liquid-glass relative w-full max-w-xs p-8 text-center">
             <h3 class="text-xl font-bold mb-4">Delete Task?</h3>
             <div class="flex gap-3">
                 <button onclick="closeDeleteModal()" class="flex-1 py-3 rounded-xl bg-zinc-200 dark:bg-zinc-800 font-bold">Cancel</button>
