--- a/index.html
+++ b/index.html
@@ -2,8 +2,15 @@
 <html lang="id" data-theme="light">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>IS2 | Productivity Hub</title>
+    
+    <link rel="manifest" href="manifest.json">
+    <meta name="theme-color" content="#000000">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <link rel="stylesheet" href="style.css">
@@ -14,15 +21,15 @@
         <header class="flex flex-col md:flex-row justify-between items-start md:items-center px-6 gap-4 fade-in">
             <div>
                 <h1 class="text-4xl font-bold tracking-tighter main-title">Information System 2</h1>
-                <p id="clock" class="sub-text font-medium text-lg mt-1 opacity-70">00:00:00</p>
+                <p id="clock" class="font-medium text-lg mt-1 opacity-70">00:00:00</p>
             </div>
             <div class="flex items-center gap-3">
-                <button onclick="toggleThemeManually()" class="p-2 bg-zinc-100 dark:bg-zinc-800 rounded-full shadow-sm theme-toggle-btn">
+                <button onclick="toggleThemeManually()" class="p-3 bg-zinc-100 dark:bg-zinc-800 rounded-full shadow-sm">
                     <span id="theme-icon">🌙</span>
                 </button>
                 <div class="status-pill px-4 py-2 rounded-xl flex items-center gap-2 bg-zinc-100 dark:bg-zinc-800">
-                    <span class="dot w-2 h-2 rounded-full bg-green-500" id="status-dot"></span> 
-                    <span class="status-label text-[10px] font-black uppercase">System Active</span>
+                    <span class="w-2 h-2 rounded-full bg-green-500" id="status-dot"></span> 
+                    <span class="text-[10px] font-black uppercase">SYSTEM ACTIVE</span>
                 </div>
             </div>
         </header>
@@ -64,28 +71,20 @@
                             <input type="url" id="taskLink" placeholder="https://..." class="w-full glass-input p-3 text-sm">
                         </div>
                     </div>
-                    <button onclick="simpanData()" id="btnSimpan" class="btn-submit w-full shadow-lg">
-                        Update Hub
-                    </button>
-                </div>
-
-                <div class="calendar-widget p-6 text-center shadow-xl">
-                    <p id="cal-month" class="text-xs font-black uppercase tracking-widest opacity-60"></p>
-                    <p id="cal-date" class="text-7xl font-bold my-1"></p>
-                    <p id="cal-day" class="text-base font-medium opacity-70"></p>
+                    <button onclick="simpanData()" id="btnSimpan" class="btn-submit w-full">Update Hub</button>
                 </div>
             </div>
 
             <div class="lg:col-span-8 space-y-6 fade-in">
-                <div class="liquid-glass p-6">
-                    <h2 class="text-xl font-bold mb-6 tracking-tight">Academic Calendar</h2>
-                    <div id="calendar-month-year" class="text-xs font-bold mb-4 opacity-40 uppercase text-center"></div>
-                    <div id="calendar-container" class="grid grid-cols-7 gap-2"></div>
-                </div>
-
                 <div class="liquid-glass p-6 min-h-[400px]">
                     <h2 class="text-xl font-bold mb-6 tracking-tight">Timeline Feed</h2>
                     <div id="listData" class="space-y-4"></div>
+                </div>
+                
+                <div class="liquid-glass p-6">
+                    <h2 class="text-xl font-bold mb-6 tracking-tight text-center">Calendar</h2>
+                    <div id="calendar-month-year" class="text-xs font-bold mb-4 opacity-40 uppercase text-center"></div>
+                    <div id="calendar-container" class="grid grid-cols-7 gap-2"></div>
                 </div>
             </div>
         </div>
@@ -93,7 +92,7 @@
 
     <div id="deleteModal" class="fixed inset-0 z-[100] hidden items-center justify-center p-4">
         <div class="absolute inset-0 bg-black/40 backdrop-blur-md"></div>
-        <div class="liquid-glass relative w-full max-w-xs p-8 text-center">
+        <div class="liquid-glass relative w-full max-w-xs p-8 text-center bg-white dark:bg-zinc-900">
             <h3 class="text-xl font-bold mb-4">Delete Task?</h3>
             <div class="flex gap-3">
                 <button onclick="closeDeleteModal()" class="flex-1 py-3 rounded-xl bg-zinc-200 dark:bg-zinc-800 font-bold">Cancel</button>
@@ -103,5 +102,10 @@
     </div>
 
     <script src="script.js"></script>
+    <script>
+        if ('serviceWorker' in navigator) {
+            navigator.serviceWorker.register('sw.js');
+        }
+    </script>
 </body>
 </html>
