--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                                 <select id="priority" class="w-full glass-input p-3 text-sm">
                                     <option value="low">Low</option>
                                     <option value="medium" selected>Medium</option>
-                                    <option value="high">High 🔥</option>
+                                    <option value="high">High</option>
                                 </select>
                             </div>
                         </div>
