--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
     <script src="script.js"></script>
     <script>
-        // Mendaftarkan Service Worker untuk fitur install Android
+        // Pendaftaran Service Worker
         if ('serviceWorker' in navigator) {
             navigator.serviceWorker.register('sw.js');
         }
