--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 </div>
                 
                 <div class="liquid-glass p-6">
-                    <h2 class="text-xl font-bold mb-6 tracking-tight text-center">Calendar</h2>
+                    <h2 class="text-xl font-bold mb-6 tracking-tight text-center">Academic Calendar</h2>
                     <div id="calendar-month-year" class="text-xs font-bold mb-4 opacity-40 uppercase text-center"></div>
                     <div id="calendar-container" class="grid grid-cols-7 gap-2"></div>
                 </div>
@@ -89,10 +89,10 @@
 
     <div id="deleteModal" class="fixed inset-0 z-[100] hidden items-center justify-center p-4">
         <div class="absolute inset-0 bg-black/40 backdrop-blur-md"></div>
-        <div class="liquid-glass relative w-full max-w-xs p-8 text-center">
+        <div class="liquid-glass relative w-full max-w-xs p-8 text-center bg-zinc-900">
             <h3 class="text-xl font-bold mb-4">Delete Task?</h3>
             <div class="flex gap-3">
-                <button onclick="closeDeleteModal()" class="flex-1 py-3 rounded-xl bg-zinc-200 dark:bg-zinc-800 font-bold">Cancel</button>
+                <button onclick="closeDeleteModal()" class="flex-1 py-3 rounded-xl bg-zinc-800 font-bold">Cancel</button>
                 <button id="confirmDeleteBtn" class="flex-1 py-3 rounded-xl bg-red-600 text-white font-bold">Delete</button>
             </div>
         </div>
